--- a/_posts/2022-01-11-m2.md
+++ b/_posts/2022-01-11-m2.md
@@ -22,42 +22,45 @@ In order to gain more insights on what particular features of our product will a
 
 The next step was to conduct the survey, through Google Forms, and the question groups were:
 
-1. Do you own a VR headset?
-2. Are you interested in playing a VR game, even if you don't already own a headset?
+* Do you own a VR headset?
+* Are you interested in playing a VR game, even if you don't already own a headset?
 
 >Aimed to show us the general interest people have for a VR game.
 
-3. How much do horror games appeal to you?
-4. How much do puzzle games appeal to you?
+* How much do horror games appeal to you?
+* How much do puzzle games appeal to you?
 
 >This goes even deeper into the two genres of the game. We want to see if they are of equal interest to our customers without one overpowering the other.
 
-5. How often do you play video games?
-6. And when you are playing, how often is it that you are playing a horror video game?
-7. If you answered between 1 to 5 to the previous question, when do you prefer to play horror video games?
+* How often do you play video games?
+* And when you are playing, how often is it that you are playing a horror video game?
+* If you answered between 1 to 5 to the previous question, when do you prefer to play horror video games?
 
 >This categorises customers that will interact with our game on set times. We can use this information to market our game during these periods.
 
-8. Which of these features would make your gaming experience unique?
+* Which of these features would make your gaming experience unique?
 
 >Segmenting by benefits sought shows us what experience would our customers want more. With that in mind we can push prioritised features first so that our game gains more following at launch.
 
-9. What makes you lose interest in a video game far too early?
+* What makes you lose interest in a video game far too early?
 
 >We also need to know the deal breakers for our clients. We want to make sure that people play our game for as long as possible.
 
-10. What makes you invest in a video game?
+* What makes you invest in a video game?
 
->This question is meant to reveal the factors that make our undecided clients push that "purchase" button. With that in mind, we can take certain actions, such as deal, knowing that they will bring more profit,
+>This question is meant to reveal the factors that make our undecided clients push that "purchase" button. With that in mind, we can take certain actions, such as offer deals.
 
-11. How much would you be willing to spend on an indie VR game?
+* How much would you be willing to spend on an indie VR game?
+
 >Straightforward question that will reveal if our price estimation was realistic enough.
 
-12. Is there something else you wish to see in a VR video game?
+* Is there something else you wish to see in a VR video game?
+
 >Typical open question to make sure that no client input is left unheard.
 
-13. How old are you?
-> Although not a behavioural question, this helps us identify age groups and see if responses vary from one to another.
+* How old are you?
+
+>Although not a behavioural question, this helps us identify age groups and see if responses vary from one to another.
 
 ## Customer Detail - Results
 
