--- a/_posts/2022-01-11-m3.md
+++ b/_posts/2022-01-11-m3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Wireframe"
+title: "Wireframe & Landing Page"
 date: 2021-11-15 12:00:00
 tags: ['Milestone 3']
 published: true
