--- a/_posts/2022-01-11-m7.md
+++ b/_posts/2022-01-11-m7.md
@@ -18,7 +18,7 @@ excerpted: |
 ## [Watch Our Demo Here!](https://drive.google.com/file/d/1zl0-EFyQmQ9nzR-BYPpbEAQQmItKTBNO/view)
 
 
-# Technical aspects:
+# Technical aspects
 - Unreal Engine & its Assets Marketplace
 - C++ & Blueprint Visual Scripting
 - SteamVR
