Added initial inspiration to m3

--- a/_posts/2022-01-11-m3.md
+++ b/_posts/2022-01-11-m3.md
@@ -18,6 +18,9 @@ excerpted: |
 # Wireframe
 The object of the game is to solve a number of puzzles and escape the hotel.
 
+## Initial Inspiration
+{% imager murdercastle.jpg|center %}
+
 ## Level 1 - Attic
 The first level is in the attic, where H.H. Holmes has trapped you, the player. After looking around the room, you find an odd looking oil lamp. Looking around some more, a note on the desk suggests using the oil lamp on an basic "hidden text" element, serving as an immersive tutorial on how to use the oil lamp to reveal invisible text. Following the revealed instructions, it becomes clear that you should look for a key hidden in the bookcase. The key unlocks the door and you are now free to roam the hotel.
 
